--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "dependencies": {
         "@popperjs/core": "^2.11.6",
         "aos": "^2.3.4",
-        "bootstrap": "^5.0.2",
+        "bootstrap": "^5.2.3",
         "gulp-cli": "^2.3.0",
         "jquery": "^3.5.1",
         "jquery.easing": "^1.4.1",
@@ -30,16 +30,18 @@
         "gulp": "^4.0.2",
         "gulp-autoprefixer": "^6.1.0",
         "gulp-beautify": "^3.0.0",
+        "gulp-clean": "^0.4.0",
         "gulp-clean-css": "^4.3.0",
         "gulp-inject-string": "^1.1.2",
         "gulp-minify": "^3.0.0",
         "gulp-nunjucks": "^3.1.1",
         "gulp-rename": "^2.0.0",
+        "gulp-replace": "^1.1.4",
         "gulp-sass": "^5.1.0",
         "gulp-surge": "^0.1.4",
+        "gulp-webp": "^4.0.1",
         "merge-stream": "^2.0.0",
         "node-sass": "^8.0.0",
-        "gulp-clean": "^0.4.0",
         "sass": "^1.57.1"
     }
 }
