--- a/package.json
+++ b/package.json
@@ -1,47 +1,36 @@
 {
-    "name": "project_name",
-    "title": "project_title",
-    "version": "1.0.0",
-    "description": "project_description",
-    "author": "Limão Acidez Tecnológica",
-    "homepage": "http://thiagolima.com",
-    "license": "http://thiagolima.com/license/",
-    "main": "gulpfile.js",
-    "scripts": {
-        "start": "gulp start",
-        "watch": "gulp watch",
-        "deploy": "gulp deploy",
-        "dist": "gulp"
-    },
-    "dependencies": {
-        "@popperjs/core": "^2.11.6",
-        "aos": "^2.3.4",
-        "bootstrap": "^5.2.3",
-        "gulp-cli": "^2.3.0",
-        "jquery": "^3.5.1",
-        "jquery.easing": "^1.4.1",
-        "owl.carousel": "^2.3.4",
-        "select2": "~4.0",
-        "utf-8-validate": "^6.0.0"
-    },
-    "devDependencies": {
-        "browser-sync": "^2.27.11",
-        "bufferutil": "^4.0.7",
-        "gulp": "^4.0.2",
-        "gulp-autoprefixer": "^6.1.0",
-        "gulp-beautify": "^3.0.0",
-        "gulp-clean": "^0.4.0",
-        "gulp-clean-css": "^4.3.0",
-        "gulp-inject-string": "^1.1.2",
-        "gulp-minify": "^3.0.0",
-        "gulp-nunjucks": "^3.1.1",
-        "gulp-rename": "^2.0.0",
-        "gulp-replace": "^1.1.4",
-        "gulp-sass": "^5.1.0",
-        "gulp-surge": "^0.1.4",
-        "gulp-webp": "^4.0.1",
-        "merge-stream": "^2.0.0",
-        "node-sass": "^8.0.0",
-        "sass": "^1.57.1"
-    }
+  "name": "git-project",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@material-ui/core": "^4.12.4",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/lab": "^5.0.0-alpha.127",
+    "@mui/material": "^5.12.1",
+    "@mui/styles": "^5.12.0",
+    "@mui/x-data-grid": "^6.2.0",
+    "axios": "^1.3.5",
+    "material-table": "^2.0.3",
+    "moment": "^2.29.4",
+    "react": "^18.2.0",
+    "react-data-table-component": "^7.5.3",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
+    "react-router-dom": "^6.10.0"
+  },
+  "devDependencies": {
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "@vitejs/plugin-react": "^3.1.0",
+    "typescript": "^4.9.3",
+    "vite": "^4.2.0"
+  }
 }
